--- a/gps1-2.html
+++ b/gps1-2.html
@@ -25,7 +25,7 @@ We spent 1.5 hours on this challenge.
               Perhaps the most important is the early and continuous exposure to other students'
               work habits, work flow, coding techniques, etc. Another benefit is acclimating future programmers to working collaboratively: the culture, the communication, etc.
           </p>
-          <h3>Delineation of Navigator's and Drivers Responsibilities</h3>
+          <h3>Delineation of Navigator's and Driver's Responsibilities</h3>
           <div class="col-wrapper">
             <div class="left-col">
               <h5>Driver</h5>
