--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Vinh Quang Bui</title>
-  <link rel="stylesheet" type="text/css" href="stylesheets/default.css" />
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="stylesheets/default.css">
+  <link rel="stylesheet" href="stylesheets/homepage.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <title>VQB</title>
 </head>
-<body>
-  <!-- begin header -->
-  <div id="header">
-    <div class="header-logo-container"><a class="header-logo" href="http://bicyclethief.github.io/index.html">Vinh Quang Bui</a></div>
-    <div id="header-links-container">
-      <a class="header-link" href="#">projects</a>
-      <a class="header-link" href="blog/index.html">blog</a>
-      <a class="header-link" href="mailto:bicyclethief@gmail.com">contact</a>
-    </div>
-  </div>
-  <!-- end header -->
-
-  <!-- begin body content -->
-  <div id="body-content">
-    <img src="imgs/1x1.png" alt="" height="500" width="300">
-  </div>
-  <!-- begin body content -->
-
-  <!-- begin footer -->
-  <div id="footer">
-
-  </div>
-  <!-- end footer -->
+<body class="site">
+    <header>
+      <div class="name-logo"><a href="http://bicyclethief.github.io">VQB</a></div>
+      <ul class="navigation">
+        <li><a href="#">Projects</a></li>
+        <li><a href="blog/index.html">Blog</a></li>
+        <li><a href="mailto:bicyclethief@gmail.com">Contact</a></li>
+      </ul>
+    </header>
+    <main class="site-content">
+      <div class="homepage-content">
+        <div class="name">vinh quang bui</div>
+        <div class="social-media-wrapper">
+          <span class="social-media-icon-wrapper"><a class="circle twitter" href="https://twitter.com/VinhDevBootcamp"><i class="fa fa-twitter fa-3x"></i></a></span>
+            <span class="social-media-icon-wrapper"><a class="circle linkedin" href="https://www.linkedin.com/profile/view?id=388999422"><i class="fa fa-linkedin fa-3x"></i></a></span>
+            <span class="social-media-icon-wrapper"><a class="circle github" href="https://github.com/bicyclethief"><i class="fa fa-github fa-3x"></i></a></span>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="footer-social-media-wrapper">
+        <div class="footer-social-media-icon-wrapper"><a href="https://twitter.com/VinhDevBootcamp" class="twitter-color"><i class="fa fa-twitter-square fa-lg"></i></a></div>
+        <div class="footer-social-media-icon-wrapper"><a href="https://www.linkedin.com/profile/view?id=388999422" class="linkedin-color"><i class="fa fa-linkedin-square fa-lg"></i></a></div>
+        <div class="footer-social-media-icon-wrapper"><a href="https://github.com/bicyclethief" class="github-color"><i class="fa fa-github-square fa-lg"></i></a></div>
+      </div>
+    </footer>
 </body>
 </html>
