make link to website homepage relative; change up some colors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </ul>
     </header>
     <main class="site-content">
-      <div class="homepage-content">
+      <div class="homepage-content homepage-bg-img">
         <div class="name">vinh quang bui</div>
         <div class="social-media-wrapper">
           <span class="social-media-icon-wrapper"><a class="circle twitter" href="https://twitter.com/VinhDevBootcamp"><i class="fa fa-twitter fa-3x"></i></a></span>
