--- a/projects/tanks/index.html
+++ b/projects/tanks/index.html
@@ -2,14 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>TANK</title>
+  <title>TANKS!</title>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
   <script src="js/src.js" type="text/javascript"></script>
+  <style>
+    body {
+      background-color: #ebe4c8;
+
+      color: #303030;
+      font-family: 'Lato', sans-serif;
+      font-size: 1em;
+    }
+    .container {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: flex-start;
+      align-items: center;
+    }
+    .game {
+      padding-bottom: 33px;
+      display: flex;
+      flex-flow: column wrap;
+      align-items: center;
+    }
+    #canvas {
+      border: 3px solid #1a1a1a;
+    }
+    .note {
+      margin-top: 30px;
+    }
+  </style>
 </head>
 <body>
-  <div style="position: absolute; top: 10px; left: 10px;">
-  <canvas id="canvas" width="600" height="400">
-    Your browser does not support HTML5 Canvas.
-  </canvas>
+  <div class="container">
+    <div class="poster">
+      <img src="images/tanks_are_coming.jpg" alt="" height="600">
+    </div>
+    <div class="game">
+      <canvas id="canvas" width="600" height="400">
+        Your browser does not support HTML5 Canvas.
+      </canvas>
+      <div class="note">
+        an improvised game from this <a href="http://chimera.labs.oreilly.com/books/1234000001654/ch04.html" target="_blank">tutorial</a>
+      </div>
+    </div>
   </div>
 </body>
 </html>
