--- a/cheatsheets/ruby-enumerables.html
+++ b/cheatsheets/ruby-enumerables.html
@@ -5,7 +5,7 @@
   <title>Ruby Enumerable Cheat Sheet</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="stylesheets/cheatsheet.css">
+  <link rel="stylesheet" href="../stylesheets/cheatsheet.css">
 </head>
 <body>
 <div class="container-fluid">
