add to_h method

--- a/cheatsheets/ruby-enumerables.html
+++ b/cheatsheets/ruby-enumerables.html
@@ -39,6 +39,13 @@
     </div>
   </div>
   <div class="row section-body">
+    <div class="col-md-2"><code>to_h</code></div>
+    <div class="col-md-3">Returns the result of interpreting <i>enum</i> as a list of [key, value] pairs.</div>
+    <div class="col-md-7">
+      <script src="https://gist.github.com/bicyclethief/4eee8a85937ac6204d43.js"></script>
+    </div>
+  </div>
+  <div class="row section-body">
     <div class="col-md-2">
       <ul>
         <li><code>count</code></li>
